package edu.fiuba.algo3.modelo;

import edu.fiuba.algo3.modelo.CosasDelincuente.Delincuente;
import edu.fiuba.algo3.modelo.Edificios.Edificio;

public interface EstadoCiudad {
    public int atacar();
    String entrarAEdificio(Edificio edificio);
}
